Website update: Add new components, pages, and assets

--- a/src/components/home/TestimonialsSection.astro
+++ b/src/components/home/TestimonialsSection.astro
@@ -1,46 +1,38 @@
 ---
+import type {ImageMetadata} from 'astro';
+import jeffersonImage from '../../assets/testimonials/testimonial-7.jpg';
+import anshGuptaImage from '../../assets/case-studies/sophris/ansh-gupta.jpeg';
+import chrisLoImage from '../../assets/testimonials/testimonial-5.png';
+import mathiasImage from '../../assets/testimonials/testimonial-2.png';
+
 const testimonials = [
   {
-    name: 'Denzell Ford',
+    name: 'Jefferson Rodrigues',
+    role: 'Co-Founder & CTO',
+    company: 'Lerian',
+    image: jeffersonImage,
+    text: 'Our main goal is to simplify the daily operations. No more manual installations, updates, or rollbacks — everything can now be handled with a single click with Distr.',
+  },
+  {
+    name: 'Ansh Gupta',
     role: 'CTO',
-    company: 'Trieve (YC W24)',
-    image: '/src/assets/testimonials/testimonial-1.png',
-    text: 'Glasskube is able to package Trieve for generic Kubernetes clusters and also provide specific overlays for GCP and AWS for one-line installations. It effortlessly manages our complex stack—Qdrant, PostgreSQL, Keycloak, Embedding servers and more—making our on-premises Kubernetes deployments of our Search and RAG API simple and efficient.',
-  },
-  {
-    name: 'Mathias Nöbauer',
-    role: 'CEO',
-    company: 'A1 Digital',
-    image: '/src/assets/testimonials/testimonial-2.png',
-    text: 'Glasskube is the perfect solution for powering private infrastructure deployments. It simplifies the process, making it easy to deploy and manage complex applications',
-  },
-  {
-    name: 'François Massot',
-    role: 'Co-founder',
-    company: 'Quickwit',
-    image: '/src/assets/testimonials/testimonial-3.png',
-    text: 'Glasskube`s intuitive interface has made deploying and managing Quickwit on Kubernetes a breeze. The UX is outstanding. Features like type-safe package configuration and dependency aware are a game changer for managing packages in Kubernetes.',
-  },
-  {
-    name: 'Siggi Simonarson',
-    role: 'Founder',
-    company: 'BuildBuddy (YC W20)',
-    image: '/src/assets/testimonials/testimonial-4.png',
-    text: 'Maintaining Helm charts takes a lot of time and effort. It`s time for the next generation of package manager for Kubernetes.',
+    company: 'Sophris.ai',
+    image: anshGuptaImage,
+    text: 'Distr eliminated nearly all deployment headaches. Updates that used to take days now take minutes.',
   },
   {
     name: 'Chris Lo',
     role: 'Co-founder',
     company: 'Tracecat (YC W24)',
-    image: '/src/assets/testimonials/testimonial-5.png',
-    text: 'Glasskube made it possible to move from being self-hosted only on AWS ECS to being deployed everywhere Kubernetes runs—even in the most protected environments.',
+    image: chrisLoImage,
+    text: 'Distr made it possible to move from being self-hosted only on AWS ECS to being deployed everywhere Kubernetes runs—even in the most protected environments.',
   },
   {
-    name: 'Antoine Coetsier',
-    role: 'Co-founder and COO',
-    company: 'EXOSCALE',
-    image: '/src/assets/testimonials/testimonial-6.png',
-    text: 'Glasskube`s managed open-source tools are a crucial part of our marketplace, enabling secure, fully automated application deployment and management on Exoscale`s cloud.',
+    name: 'Mathias Nöbauer',
+    role: 'CEO',
+    company: 'A1 Digital',
+    image: mathiasImage,
+    text: 'Distr is the perfect solution for powering private infrastructure deployments. It simplifies the process, making it easy to deploy and manage complex applications',
   },
 ];
 ---
@@ -61,7 +53,7 @@ const testimonials = [
             </p>
             <div class="flex items-center gap-4 mt-auto">
               <img
-                src={testimonial.image}
+                src={testimonial.image.src}
                 alt={testimonial.name}
                 class="w-12 h-12 md:w-14 md:h-14 rounded-full object-cover flex-shrink-0"
               />
