--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import HeroSection from '~/components/home/HeroSection.astro';
+import MetricsSection from '../components/home/MetricsSection.astro';
 import FeaturesSection from '../components/home/FeaturesSection.astro';
 import ProductsSection from '../components/home/ProductsSection.astro';
 import VideoSection from '../components/home/VideoSection.astro';
@@ -13,6 +14,7 @@ import StarlightLayout from '../layouts/StarlightLayout.astro';
   title="Distribute your application to self-managed customers - Distr"
   description="Featuring a GUI and a CLI. Glasskube packages are dependency aware, GitOps ready and get automatic updates via a central public package repository.">
   <HeroSection />
+  <MetricsSection />
   <FeaturesSection />
   <ProductsSection />
   <VideoSection />
