--- a/src/components/home/NewsletterSection.astro
+++ b/src/components/home/NewsletterSection.astro
@@ -6,7 +6,7 @@
   <div class="container mx-auto px-4 max-w-3xl">
     <div class="text-center">
       <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-4">
-        Glasskube Newsletter
+        Distr Newsletter
       </h2>
       <p
         class="text-base md:text-lg text-gray-600 dark:text-gray-300 mb-6 md:mb-8">
