--- a/src/pages/compare/index.astro
+++ b/src/pages/compare/index.astro
@@ -27,7 +27,8 @@ import CTASection from '../../components/home/CTASection.astro';
               Distr vs Replicated
             </h2>
             <p class="text-gray-600 dark:text-gray-400">
-              Compare Distr with Replicated, a mature software distribution platform
+              Compare Distr with Replicated, a mature software distribution
+              platform
             </p>
           </a>
         </div>
@@ -36,4 +37,3 @@ import CTASection from '../../components/home/CTASection.astro';
   </div>
   <CTASection />
 </Layout>
-
