--- a/src/pages/case-studies/sophris.astro
+++ b/src/pages/case-studies/sophris.astro
@@ -46,20 +46,13 @@ By choosing Distr, Sophris improved their on-premises distribution experience, s
 ---
 
 <StarlightLayout title={title} description={description}>
-  <div class="py-8 md:py-16">
-    <!-- Case Study Content -->
-    <section class="mb-16">
-      <div class="container mx-auto px-4">
-        <CaseStudyCard {...sophrisCase} />
-      </div>
-    </section>
+  <section class="py-8 md:py-16 lg:py-24 bg-gray-50 dark:bg-gray-800">
+    <div class="container mx-auto px-4">
+      <CaseStudyCard {...sophrisCase} />
+    </div>
+  </section>
 
-    <!-- CTA Section -->
-    <CTASection />
+  <CTASection />
 
-    <div class="my-16 md:my-24"></div>
-
-    <!-- Newsletter Section -->
-    <NewsletterSection />
-  </div>
+  <NewsletterSection />
 </StarlightLayout>
