chore: refactor case study page
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/pages/case-studies/index.astro
+++ b/src/pages/case-studies/index.astro
@@ -1,13 +1,13 @@
 ---
-import StarlightLayout from '../layouts/StarlightLayout.astro';
-import CTASection from '../components/home/CTASection.astro';
-import NewsletterSection from '../components/home/NewsletterSection.astro';
+import StarlightLayout from '~/layouts/StarlightLayout.astro';
+import CTASection from '~/components/home/CTASection.astro';
+import NewsletterSection from '~/components/home/NewsletterSection.astro';
 import {Icon} from 'astro-icon/components';
 import type {ImageMetadata} from 'astro';
 
 // Import images
-import anshGuptaImage from '../assets/case-studies/sophris/ansh-gupta.jpeg';
-import jeffersonImage from '../assets/testimonials/testimonial-7.jpg';
+import anshGuptaImage from '~/assets/case-studies/sophris/ansh-gupta.jpeg';
+import jeffersonImage from '~/assets/testimonials/testimonial-7.jpg';
 import MetricsSection from '~/components/home/MetricsSection.astro';
 
 const title = 'Case Studies';
