--- a/src/components/home/FeaturesSection.astro
+++ b/src/components/home/FeaturesSection.astro
@@ -27,8 +27,8 @@ const features = [
   <div class="container mx-auto px-4 max-w-7xl">
     <div class="text-center mb-8 md:mb-16 max-w-4xl mx-auto">
       <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold leading-tight">
-        The Distr Software Distribution Platform is the central place to manage
-        all your self-managed, vpc and air-gapped customers.
+        Distr is the central place to manage all your self-managed, vpc and
+        air-gapped customers.
       </h2>
     </div>
 
