fix: global list-none styling
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,4 +74,9 @@
       @apply list-decimal;
     }
   }
+
+  /* Remove default list styling for custom lists outside markdown content */
+  ul.list-none li {
+    list-style-type: none;
+  }
 }
