fix: index seo description
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import StarlightLayout from '../layouts/StarlightLayout.astro';
 
 <StarlightLayout
   title="Distribute your application to self-managed customers - Distr"
-  description="Featuring a GUI and a CLI. Glasskube packages are dependency aware, GitOps ready and get automatic updates via a central public package repository.">
+  description="Distr is an open-source software distribution platform that helps DevOps teams deploy PoCs quickly and securely into customer-controlled environments.">
   <HeroSection />
   <MetricsSection />
   <FeaturesSection />
