chore: use relative imports
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/components/blog/GridItem.astro
+++ b/src/components/blog/GridItem.astro
@@ -1,5 +1,5 @@
 ---
-import type {Post, PostData} from '../../types';
+import type {Post, PostData} from '~/types';
 import Image from '../common/Image.astro';
 
 export interface Props {
