--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -2,7 +2,7 @@
 import DemoButton from '../DemoButton.astro';
 import SignupButton from '../SignupButton.astro';
 import HeroCarousel from './HeroCarousel.astro';
-import {images} from '../../assets/index';
+import {images} from '~/assets/index';
 ---
 
 <header
