--- a/src/components/home/ProductsSection.astro
+++ b/src/components/home/ProductsSection.astro
@@ -1,7 +1,7 @@
 ---
 import ThemedImage from '../util/ThemedImage.astro';
 import SignupButton from '../SignupButton.astro';
-import {images} from '../../assets/index';
+import {images} from '~/assets/index';
 
 const products = [
   {
