--- a/src/components/home/TestimonialsSection.astro
+++ b/src/components/home/TestimonialsSection.astro
@@ -1,9 +1,9 @@
 ---
 import {Icon} from 'astro-icon/components';
-import jeffersonImage from '../../assets/testimonials/testimonial-7.jpg';
-import anshGuptaImage from '../../assets/case-studies/sophris/ansh-gupta.jpeg';
-import chrisLoImage from '../../assets/testimonials/testimonial-5.png';
-import mathiasImage from '../../assets/testimonials/testimonial-2.png';
+import jeffersonImage from '~/assets/testimonials/testimonial-7.jpg';
+import anshGuptaImage from '~/assets/case-studies/sophris/ansh-gupta.jpeg';
+import chrisLoImage from '~/assets/testimonials/testimonial-5.png';
+import mathiasImage from '~/assets/testimonials/testimonial-2.png';
 
 const testimonials = [
   {
