--- a/src/components/pricing/PricingFAQ.astro
+++ b/src/components/pricing/PricingFAQ.astro
@@ -1,5 +1,5 @@
 ---
-import {PricingFAQs} from '../../data/pricingFaq';
+import {PricingFAQs} from '~/data/pricingFaq';
 ---
 
 <section class="py-16 md:py-24">
