--- a/src/pages/compare/index.astro
+++ b/src/pages/compare/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../../layouts/StarlightLayout.astro';
-import CTASection from '../../components/home/CTASection.astro';
+import Layout from '~/layouts/StarlightLayout.astro';
+import CTASection from '~/components/home/CTASection.astro';
 ---
 
 <Layout
