--- a/src/components/blog/Grid.astro
+++ b/src/components/blog/Grid.astro
@@ -1,6 +1,6 @@
 ---
 import Item from './GridItem.astro';
-import type {Post} from '../../types';
+import type {Post} from '~/types';
 
 export interface Props {
   posts: Post[];
