--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -1,7 +1,7 @@
 ---
 import {Icon} from '@astrojs/starlight/components';
 import Image from '../common/Image.astro';
-import type {Post} from '../../types';
+import type {Post} from '~/types';
 
 export interface Props {
   post: Post;
