--- a/src/components/home/HeroCarousel.astro
+++ b/src/components/home/HeroCarousel.astro
@@ -1,6 +1,6 @@
 ---
 import ThemedImage from '../util/ThemedImage.astro';
-import {images} from '../../assets';
+import {images} from '~/assets';
 import '../../styles/embla.css';
 
 const slides = [
