--- a/src/pages/compare/[...slug].astro
+++ b/src/pages/compare/[...slug].astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../layouts/StarlightLayout.astro';
-import CTASection from '../../components/home/CTASection.astro';
+import Layout from '~/layouts/StarlightLayout.astro';
+import CTASection from '~/components/home/CTASection.astro';
 import {Icon} from '@astrojs/starlight/components';
-import Image from '../../components/common/Image.astro';
+import Image from '~/components/common/Image.astro';
 
 export async function getStaticPaths() {
   return [
