--- a/src/layouts/StandaloneLayout.astro
+++ b/src/layouts/StandaloneLayout.astro
@@ -11,6 +11,8 @@ import '../../node_modules/@astrojs/starlight/style/asides.css';
 import '../../node_modules/@astrojs/starlight/style/util.css';
 import 'virtual:starlight/optional-css';
 
+import StandaloneFooter from '../components/StandaloneFooter.astro';
+
 export interface Props {
   title: string;
   description: string;
@@ -38,7 +40,10 @@ const ogUrl = Astro.url.href;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
-  <body>
-    <slot />
+  <body class="bg-gray-50 dark:bg-gray-900 min-h-screen">
+    <main>
+      <slot />
+    </main>
+    <StandaloneFooter />
   </body>
 </html>
